--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,9 +14,7 @@ build_script:
   - set
   - set PATH=C:\msys64\%MSYSTEM%\bin;C:\msys64\usr\bin;%PATH%
   - set CHERE_INVOKING=yes
-  - wget https://www.paralint.com/projects/notifu/dl/notifu-src-1.6.1.zip
-  - bash -lc 'exec test $(sha256sum notifu-src-1.6.1.zip | cut -d " " -f0) eq 0fdcd08d3e12d87af76cdaafbf1278c4fcf1baf5d6447cce1a676b8d78a4d8c3'
-  - unzip notifu-src-1.6.1.zip
+  - bash -lc "bash .appveyor/get_notifu.sh"
   - MSBuild.exe .\notifu.sln /p:Configuration=Debug /p:Platform=WIN32
   - bash -lc "cp Debug/notifu.exe tools/win_installer/misc"
   - bash -lc "pacman --noconfirm --ask 20 -Suy"
