add isort settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,5 @@ select = W1, W2, W3, E11, E124, E125, E129, E2, E3, E401, E502, E703, E711, E712
 max-line-length = 100
 
 [isort]
-known_third_party=dbus,gi
-known_first_party=gpodder
-
+known_third_party=dbus,gi,mutagen,cairo
+known_first_party=gpodder,soco
