--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,8 @@
 count=1
 select = W1, W2, W3, E11, E121, E122, E123, E124, E125, E127, E129, E13, E2, E3, E401, E5, E703, E711, E712, E713, E721, E731, E74, E9
 # https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
-max-line-length = 145
+max-line-length = 142
 
 [isort]
-known_third_party=dbus,gi,mutagen,cairo,requests
+known_third_party=dbus,gi,mutagen,cairo,requests,github3,jinja2,magic
 known_first_party=gpodder,soco
