--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       # important: must be same as mac bundle's python
       - image: python:3.6
     environment:
-      - BUNDLE_TAG: base-3.10.6_0
+      - BUNDLE_TAG: base-4.0.0
     shell: /bin/bash --login -o pipefail
     steps:
       - checkout
