--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,6 +16,8 @@ build_script:
   - set PATH=C:\msys64\%MSYSTEM%\bin;C:\msys64\usr\bin;%PATH%
   - set CHERE_INVOKING=yes
   - bash -lc "pacman --noconfirm --ask 20 -Suy"
+  # rerun per the "terminate MSYS2 without returning to shell and check for updates again" message
+  - bash -lc "pacman --noconfirm --ask 20 -Suy"
   - bash -lc "bash .appveyor/msys2.sh"
 
 artifacts:
