--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,6 +16,10 @@ build_script:
   - set PATH=C:\msys64\%MSYSTEM%\bin;C:\msys64\usr\bin;%PATH%
   - set CHERE_INVOKING=yes
   - bash -lc "pacman --noconfirm --ask 20 -Suy"
+  # remove precisely conflicting packages
+  # - bash -lc "pacman --noconfirm --ask 20 --remove mingw-w64-x86_64-gcc-ada mingw-w64-x86_64-gcc-objc mingw-w64-i686-gcc-ada mingw-w64-i686-gcc-objc"
+  # fresh toolchain reinstall (most will get updated anyway)
+  - bash -lc "pacman --noconfirm --ask 20 --remove mingw-w64-i686-toolchain mingw-w64-x86_64-toolchain"
   # rerun per the "terminate MSYS2 without returning to shell and check for updates again" message
   - bash -lc "pacman --noconfirm --ask 20 -Suy"
   - bash -lc "bash .appveyor/msys2.sh"
