--- a/setup.cfg
+++ b/setup.cfg
@@ -5,5 +5,5 @@ select = W1, W2, W3, E11, E121, E122, E123, E124, E125, E127, E129, E13, E2, E3,
 max-line-length = 142
 
 [isort]
-known_third_party=dbus,gi,mutagen,cairo,requests,github3,jinja2,magic
+known_third_party=dbus,gi,mutagen,cairo,requests,github3,jinja2,magic,youtube_dl
 known_first_party=gpodder,soco
