Added .desktop, .service and locale products of compilation to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ src/podcastparser.py
 src/mygpoclient
 src/dbus
 build
+share/applications/gpodder-url-handler.desktop
+share/applications/gpodder.desktop
+share/dbus-1/services/org.gpodder.service
+share/locale/
