--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
     - sudo apt-get update -q
     - sudo apt-get install intltool desktop-file-utils
-    - pip3 install coverage minimock pycodestyle isort
+    - pip3 install coverage==4.5.4 minimock pycodestyle isort
     - python3 tools/localdepends.py
 script:
     - make lint
