run tests and lint on ubuntu 20.04 with python 3.8

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
-dist: trusty
+dist: focal
 sudo: required
 python:
-    - "3.5"
+    - "3.8"
 install:
     - sudo apt-get update -q
     - sudo apt-get install intltool desktop-file-utils
