--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
     - sudo apt-get update -q
     - sudo apt-get install intltool desktop-file-utils
-    - pip3 install pytest-cov minimock pycodestyle isort requests pytest pytest-httpserver
+    - "pip3 install pytest-cov minimock pycodestyle 'isort<5.0' requests pytest pytest-httpserver"
     - python3 tools/localdepends.py
 script:
     - make lint
