win: fix failing build

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,8 +18,8 @@ build_script:
   # workaround new msys2 packagers
   - curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz
   - curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig
-  - pacman-key --verify msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig
-  - pacman -U msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz
+  - bash -lc "pacman-key --verify msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig"
+  - bash -lc "pacman -U msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
   - bash -lc "pacman --noconfirm --ask 20 -Suy"
   # remove precisely conflicting packages
   - bash -lc "pacman --noconfirm --ask 20 --remove mingw-w64-x86_64-gcc-ada mingw-w64-x86_64-gcc-objc mingw-w64-i686-gcc-ada mingw-w64-i686-gcc-objc"
