--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,17 +20,16 @@ build_script:
   - curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig
   - bash -lc "pacman-key --verify msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig"
   - bash -lc "pacman --noconfirm  -U msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
-  # workaround updating msys2-runtime breaks all programs until last one exited
-  - bash -lc "pacman -Syuu --noconfirm"
-  - Powershell.exe "Stop-Process -name dirmngr -Erroraction silentlycontinue; echo killed dirmng"
-  - Powershell.exe "Stop-Process -name gpg-agent -Erroraction silentlycontinue; echo killed gpg-agent"
-  - bash -lc "pacman -Syuu --noconfirm"
-  - Powershell.exe "Stop-Process -name dirmngr -Erroraction silentlycontinue"
-  - Powershell.exe "Stop-Process -name gpg-agent -Erroraction silentlycontinue"
   # remove precisely conflicting packages
   - bash -lc "pacman --noconfirm --ask 20 --remove mingw-w64-x86_64-gcc-ada mingw-w64-x86_64-gcc-objc mingw-w64-i686-gcc-ada mingw-w64-i686-gcc-objc"
-  # rerun per the "terminate MSYS2 without returning to shell and check for updates again" message
-  - bash -lc "pacman --noconfirm --ask 20 -Suy"
+  # workaround updating msys2-runtime breaks all programs until last one exited
+  - bash -lc "pacman -Syuu --noconfirm"
+  - Powershell.exe "Stop-Process -name dirmngr -Erroraction silentlycontinue; echo killing_dirmng"
+  - Powershell.exe "Stop-Process -name gpg-agent -Erroraction silentlycontinue; echo killing_gpg-agent"
+  - bash -lc "pacman -Syuu --noconfirm"
+  - Powershell.exe "Stop-Process -name dirmngr -Erroraction silentlycontinue; echo killing_dirmng"
+  - Powershell.exe "Stop-Process -name gpg-agent -Erroraction silentlycontinue; echo killing_gpg-agent"
+  # finally run the install process
   - bash -lc "bash .appveyor/msys2.sh"
 
 artifacts:
