--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,6 +22,10 @@ build_script:
   - bash -lc "pacman --noconfirm  -U msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
   # remove precisely conflicting packages
   - bash -lc "pacman --noconfirm --ask 20 --remove mingw-w64-x86_64-gcc-ada mingw-w64-x86_64-gcc-objc mingw-w64-i686-gcc-ada mingw-w64-i686-gcc-objc"
+  # https://www.msys2.org/news/#2020-12-26-zstd-exemption-for-core-packages-removed
+  - bash -lc "pacman --noconfirm -U 'http://repo.msys2.org/msys/x86_64/libzstd-1.4.4-2-x86_64.pkg.tar.xz'"
+  - bash -lc "pacman --noconfirm -U 'http://repo.msys2.org/msys/x86_64/zstd-1.4.4-2-x86_64.pkg.tar.xz'"
+  - bash -lc "pacman --noconfirm -U 'http://repo.msys2.org/msys/x86_64/pacman-5.2.1-6-x86_64.pkg.tar.xz'"
   # workaround updating msys2-runtime breaks all programs until last one exited
   - bash -lc "pacman -Syuu --noconfirm"
   - Powershell.exe "Stop-Process -name dirmngr -Erroraction silentlycontinue; echo killing_dirmng"
