Disable circleci for adaptive branch.
There is no reason to generate mac builds until gpodder-osx-bundle
gets libhandy, if ever.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,7 @@ workflows:
   build-bundle:
     jobs:
       - release-from-macos
+        filters:
+          branches:
+            ignore:
+              - adaptive
