Use gpodder-adaptive as icon in app and .desktop files

--- a/share/applications/gpodder-url-handler.desktop.in
+++ b/share/applications/gpodder-url-handler.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
-_Name=gPodder (subscribe to feed)
+_Name=gPodder-adaptive (subscribe to feed)
 Exec=__PREFIX__/bin/gpodder -s %u
-Icon=gpodder
+Icon=gpodder-adaptive
 Terminal=false
 NoDisplay=true
 Type=Application
