--- a/share/applications/gpodder.desktop.in
+++ b/share/applications/gpodder.desktop.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
-_Name=gPodder
-_X-GNOME-FullName=gPodder Podcast Client
+_Name=gPodder-adaptive
+_X-GNOME-FullName=gPodder Podcast Client with adaptive interface
 _GenericName=Podcast Client
 _Comment=Subscribe to audio and video content from the web
 Exec=__PREFIX__/bin/gpodder
-Icon=gpodder
+Icon=gpodder-adaptive
 Terminal=false
 Type=Application
 Categories=AudioVideo;Audio;Network;FileTransfer;News;GTK;
