Add X-Purism-FormFactor=Workstation;Mobile; to .desktop.in

--- a/share/applications/gpodder.desktop.in
+++ b/share/applications/gpodder.desktop.in
@@ -9,3 +9,4 @@ Terminal=false
 Type=Application
 Categories=AudioVideo;Audio;Network;FileTransfer;News;GTK;
 StartupWMClass=gpodder
+X-Purism-FormFactor=Workstation;Mobile;
