prevent double run of github actions
for pull requests from branches in gpodder repo

--- a/.github/workflows/linttest.yml
+++ b/.github/workflows/linttest.yml
@@ -4,6 +4,10 @@ on: [push, pull_request]
 
 jobs:
   linttest:
+    name: lint and unit tests
+    if: >-
+      github.event_name == 'push' ||
+      github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
 
     runs-on: ubuntu-latest
     strategy:
