--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -8,6 +8,6 @@ urllib3==1.26.5
 html5lib==1.1
 mutagen==1.45.1
 dbus-python
-youtube_dl
+yt-dlp
 # eyed3 is optional and pulls in a lot of dependencies, so disable by default
 # eyed3
