Make error message more verbose on NotFound sync error

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ share/applications/gpodder-url-handler.desktop
 share/applications/gpodder.desktop
 share/dbus-1/services/org.gpodder.service
 share/locale/
+venv/*
