setup.cfg: Add section for flake8 config
Set project-wide max-line-length and ignore indentation errors E126 and
E128, and warning W503 (Line break occurred before a binary operator)
for now.

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,7 @@ max-line-length = 142
 [isort]
 known_third_party=dbus,gi,mutagen,cairo,requests,github3,jinja2,magic,youtube_dl,podcastparser,mygpoclient
 known_first_party=gpodder,soco
+
+[flake8]
+max-line-length = 142
+ignore = E126, E128, W503
