Migrate to minidb 2.0.7

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__
 .coverage
 src/podcastparser.py
 src/mygpoclient
+src/minidb.py
 src/dbus
 build
 share/applications/gpodder-url-handler.desktop
