--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -5,6 +5,7 @@ dbus-python
 html5lib==1.1
 mutagen==1.45.1
 mygpoclient==1.9
+minidb==2.0.7
 podcastparser==0.6.8
 requests[socks]==2.28.1
 urllib3==1.26.10
