--- a/.github/workflows/winget-releaser.yml
+++ b/.github/workflows/winget-releaser.yml
@@ -6,7 +6,7 @@ jobs:
   publish:
     runs-on: windows-latest # action can only be run on windows
     steps:
-      - uses: vedantmgoyal2009/winget-releaser@latest
+      - uses: vedantmgoyal2009/winget-releaser@0727cc2cdf0f3ecafd492608d2aff67b13adff55
         with:
           identifier: gpodder.gpodder
           version-regex: '[0-9.]+'
