Remove multiple statements on one line, fixes flake8 check E701
Also add the check to 'make lint'.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [pycodestyle]
 count=1
-select = W1, W2, W3, E11, E121, E122, E123, E124, E125, E127, E129, E13, E2, E3, E401, E5, E703, E711, E712, E713, E721, E731, E74, E9
+select = W1, W2, W3, E11, E121, E122, E123, E124, E125, E127, E129, E13, E2, E3, E401, E5, E701, E703, E711, E712, E713, E721, E731, E74, E9
 # https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
 max-line-length = 142
 
