Add license file to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ authors = [
     {name = "Thomas Perl", email = "thp@gpodder.org"},
 ]
 readme = "README.md"
+license = {file = "COPYING"}
 classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
 ]
