Fully switch over to the new PEP 517 build flow.
using `setuptools` as backend and `build` as frontend.
added back the setup.py for the data_files entry in it.
That is the only way to tell setuptools to include data files in the
final wheel zip file.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ src/podcastparser.py
 src/mygpoclient
 src/dbus
 build
+dist
 share/applications/gpodder-url-handler.desktop
 share/applications/gpodder.desktop
 share/dbus-1/services/org.gpodder.service
