rockbox_coverart.py: Extend to handle converting sanely
Extend the rockbox_coverart to:
 - Convert jpeg files to baseline
 - Resize files to (user-defined) square size, default 500px
 - Optionally allow upsizing of files
 - Convert to (user-defined) image type, default jpeg
 - Allow falling back to original behavior if desired
 - Lock file so we don't crash when running many at once
 - Try a few different source file names, couldn't figure
   out how to get source cover art name from gpodder

Extension now requires python modules pillow (PIL), filelock. Both
are available on pip.

--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -9,5 +9,7 @@ podcastparser==0.6.10
 requests[socks]==2.32.3
 urllib3==2.2.2
 yt-dlp
+pillow
+filelock
 # eyed3 is optional and pulls in a lot of dependencies, so disable by default
 # eyed3
