Add pillow and filelock as dependencies
In service of rockbox_coverart.py

Attempt to make appveyor build me a windows portable version
automatically

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ select = W1, W2, W3, W6, E11, E121, E122, E123, E124, E125, E127, E129, E13, E2,
 max-line-length = 142
 
 [isort]
-known_third_party=dbus,gi,mutagen,cairo,requests,github3,jinja2,magic,youtube_dl,podcastparser,mygpoclient
+known_third_party=dbus,gi,mutagen,cairo,requests,github3,jinja2,magic,youtube_dl,podcastparser,mygpoclient,filelock,pillow
 known_first_party=gpodder,soco
 
 [flake8]
