pillow dependency is for tagging and rockbox extensions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ eyed3 = ["eyed3"]
 gui = ["PySocks"]
 html5lib = ["html5lib==1.1"]
 mutagen = ["mutagen==1.47.0"]
-rockbox-coverart = ["filelock", "pillow"]
+coverart = ["filelock", "pillow"]
 yt-dlp = ["yt-dlp"]
 
 [project.urls]
