--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,8 @@ authors = [
     {name = "Thomas Perl", email = "thp@gpodder.org"},
 ]
 readme = "README.md"
-license = {file = "COPYING"}
-classifiers = [
-    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
-]
+license = "GPL-3.0-or-later"
+license-files = ["COPYING"]
 requires-python = ">=3.8"
 dependencies = [
     "dbus-python;platform_system=='Linux'",
