Revert "Fix setuptools deprecation warnings."
This reverts commit 9087202de3df0849ad0974f536205331cb25df27.

The Mac build is still using setuptools 65.5.0, must wait until it
has 77.0.3.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,10 @@ authors = [
     {name = "Thomas Perl", email = "thp@gpodder.org"},
 ]
 readme = "README.md"
-license = "GPL-3.0-or-later"
-license-files = ["COPYING"]
+license = {file = "COPYING"}
+classifiers = [
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+]
 requires-python = ">=3.8"
 dependencies = [
     "dbus-python;platform_system=='Linux'",
