flake8: ignore  B901, B902 and E722

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,4 +10,4 @@ known_first_party=gpodder,soco
 
 [flake8]
 max-line-length = 142
-ignore = BLK100, CCR001, CNL100, D1, E126, E128, E402, I, W503, Q000, SC
+ignore = B901, B902, BLK100, CCR001, CNL100, D1, E126, E128, E402, E722, I, W503, Q000, SC
