Remove underscores from desktop file keys
Translated entries are determined automagically by xgettext.

--- a/share/applications/gpodder-url-handler.desktop.in
+++ b/share/applications/gpodder-url-handler.desktop.in
@@ -1,5 +1,5 @@
 [Desktop Entry]
-_Name=gPodder (subscribe to feed)
+Name=gPodder (subscribe to feed)
 Exec=__PREFIX__/bin/gpodder -s %u
 Icon=gpodder
 Terminal=false
