--- a/share/applications/gpodder.desktop.in
+++ b/share/applications/gpodder.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
-_Name=gPodder
-_GenericName=Podcast Client
-_Comment=Subscribe to audio and video content from the web
+Name=gPodder
+GenericName=Podcast Client
+Comment=Subscribe to audio and video content from the web
 Exec=__PREFIX__/bin/gpodder
 Icon=gpodder
 Terminal=false
